--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <style>
-            @import url('https://fonts.googleapis.com/css2?family=Proxima+Nova:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
-        body {
-            font-family: 'Proxima Nova', sans-serif;
-            background-color: #f8f9fa;
-        }
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #f8f9fa;
+}
+
         .sidebar {
             position: fixed;
             top:0px;
